--- a/components/sidebar/sidebar.html
+++ b/components/sidebar/sidebar.html
@@ -9,8 +9,7 @@
 </head>
 <body>
     <nav id="root">
-        logo
-    
+        <img src="/assets/logo.svg" alt="logo" class="logo">
         <div class="menu">
                 <button onclick="loadPage(event, 'home')" class="active" page="home">Incio</button>
                 <button onclick="loadPage(event, 'residencias')" page="residencias">Residencias</button>
