--- a/components/header/header.html
+++ b/components/header/header.html
@@ -4,7 +4,8 @@
 <body>
     <div id="root">
         <nav>
-            header
+            <h4>Gestión administrativa conjuntos residenciales</h4>
+            <span>Administrador</span>
         </nav>
     </div>
 </body>
