--- a/components/sidebar/sidebar.css
+++ b/components/sidebar/sidebar.css
@@ -6,7 +6,7 @@ html, body, #root {
 }
 
 nav#root{
-    padding: 4rem 1rem;
+    padding: 2rem 1rem;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -15,7 +15,7 @@ nav#root{
 .menu{
     display: flex;
     flex-direction: column;
-    margin-top: 100px;
+    margin-top: 1rem;
 }
 
 button{
@@ -26,7 +26,8 @@ button{
     padding: .5rem .8rem;
     width: 200px;
     text-align: left;
-    margin: 4px 0 !important
+    margin: 4px 0 !important;
+    outline: none;
 }
 
 button:hover{
@@ -34,6 +35,10 @@ button:hover{
 }
 
 button.active{
-    background: #f17952;
+    background: #dc3545;
     color: #fff;
+}
+
+.logo{
+    width:80%;
 }
