--- a/pages/home/home.css
+++ b/pages/home/home.css
@@ -4,3 +4,16 @@ html, body, #root {
     margin: 0;
     padding: 0;
 }
+
+.content{
+    padding: 2rem 3rem;
+    height: calc(100vh - 4rem);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+h1{
+    font-size: 2.5rem;
+    color: #333;
+}
