--- a/pages/residentes/residentes.css
+++ b/pages/residentes/residentes.css
@@ -10,7 +10,7 @@ html, body, #root {
     height: calc(100vh - 4rem);
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: start;
 }
 
 h1{
@@ -32,4 +32,8 @@ tr{
 .residente:hover {
     cursor: pointer;
     background-color: #f1f1f1;
+}
+
+#btnAddResidente{
+    margin-left: 2rem;
 }
